Removed the background image from the body tag. The background image was set on a a div tag in order to prevent redering issues and container overlaps.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,18 +23,41 @@ html {
 }
 
 body {
-	background-color: #000;
-	background-attachment: fixed;
-	background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url("../../images/brookly_bridge.jpg");
-	background-repeat: no-repeat, no-repeat;
-	background-size: cover, cover;
-	background-position: bottom center, center center; 
 	min-height: 100vh;
 	text-transform: uppercase;
 	width: 100vw; 
 }
 
-body:after {
+#background-image {
+	background-image: linear-gradient(360deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0)), url("../../images/brookly_bridge.jpg");
+	background-repeat: no-repeat, no-repeat;
+	background-size: cover, cover;
+	background-position: bottom center, center center; 
+	min-height: 100vh;
+	position: fixed;
+	width: 100%;
+	z-index: 1;
+}
+
+/* body:after {
+	background-color: #000;
+	background-image: linear-gradient(60deg, rgba(125, 100, 150, .5), rgba(0, 100, 100, .35));
+	background-repeat: repeat, no-repeat;
+	background-size: cover;
+	background-position: top left;
+	content: '';
+	display: block;
+	height: 100vh;
+	left: 0;
+	opacity: 0;
+	position: fixed;
+	top: 0;
+	transition: opacity 3s ease-out;
+	width: 100vw;
+	z-index: 1;
+} */
+
+#background-image:after {
 	background-color: #000;
 	background-image: linear-gradient(60deg, rgba(125, 100, 150, .5), rgba(0, 100, 100, .35));
 	background-repeat: repeat, no-repeat;
@@ -57,9 +80,19 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 	transition: none;
 }
 
-body.is-preload {
+/* #background-image.is-preload *, #background-image.is-preload *:before, #background-image.is-preload *:after {
+	animation: none;
+	transition: none;
+} */
+
+/* body.is-preload {
+	background-color: #000;
+} */
+
+body.is-preload #background-image {
 	background-color: #000;
 }
+
 
 body.is-preload #home {
 	opacity: 0;
